@@ -1,8 +1,8 @@
 #!/bin/bash
 
 if [ "$1" == "" ]; then
-    echo "Usage: run.sh qualified-class-name [args]"
-    exit 1
+  echo "Usage: run.sh qualified-class-name [args]"
+  exit 1
 fi
 
 className=$1
@@ -17,4 +17,9 @@ for jar in $(ls target/dependency/*.jar target/java-opentracing-tutorial-*.jar);
   CLASSPATH=$CLASSPATH:$jar
 done
 
-java -cp $CLASSPATH $className $*
+ADD_MODULES=""
+if [ "$(java -version 2>&1 | head -1 | grep '\"1\.[78].\+\"')" = "" ]; then
+  ADD_MODULES="--add-modules=java.xml.bind"
+fi
+
+java $ADD_MODULES -cp $CLASSPATH $className $*
